package kodenix.mastermind.models;

public class Result {
	
	private int blacks;
	private int whites;
	
	Result(int whites, int blacks) {
		this.blacks = blacks;
        this.whites = whites;
	}
	
	public int getWhites() {
		return whites;
	}
	
	public int getBlacks() {
		return blacks;
	}

}
