@startuml Mastermind_PublicView_v3_0_0

title Mastermind_PublicView v3.0.0

class Mastermind {
    +Mastermind()
    +play() : void
}

+class Attempt{
    +Attempt(SecretCombination)
    +isWinner() : bool
    +getPrintedProposedCombination() : string
    +getBlacks(): int
    +getWhites(): int
}


class Result{
    +Result(whites: int, blacks: int)
    +getWhites() : int
    +getBlacks() : int
}

enum Color{
    RED('r')
    GREEN('g')
    BLUE ('b')
    YELLOW('y')
    ORANGE('o')
    PINK('p')
    +{static} getAvailableColors() : string
    +{static} getColorByChar(char) : Color
    +isSameColorAs(color : Color) : boolean
    +toString() : string
}

abstract class Combination{
    +toString() : string
}

class SecretCombination{
    +SecretCombination()
    +evalueCombination(ProposedCombination) : Result
    +toString() : string
}

class ProposedCombination{
    +ProposedCombination(String)
    +getError(): Error
}

class Console{
    +write(promptMessage : string) : void
    +read(promptMessage : string) : string
}

enum Error{
    WRONG_LENGTH
    WRONG_COLORS
    REPEATED_COLOR
    NULL
    
    +isNull(): boolean
}



Mastermind *--> SecretCombination
Mastermind *--> "0..10" Attempt

Combination ^-- SecretCombination
Combination ^-- ProposedCombination
Combination *--> "4" Color

Attempt *--> ProposedCombination
Attempt *--> Result
Attempt ..> SecretCombination

Mastermind ..> Console
ProposedCombination ..> Console

@enduml